bootloader with application listener and service layer added